mgmt/stg/helm/loki-base/kustomize/tenants/achref/collectors/new-aws/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-new-aws
  namespace: tenant-achref
  annotations:
    tenant: achref
    collector: new-aws
    type: aws
spec:
  selector:
    matchLabels:
      app: aws-new-aws
  template:
    metadata:
      labels:
        app: aws-new-aws
    spec:
      volumes:
        - name:  aws-alloy-new-aws
          secret:
            secretName:  aws-alloy-new-aws
        - name: aws-logstash-new-aws
          secret:
            secretName: aws-logstash-new-aws
      containers:
      - name: aws-alloy-new-aws
        image: grafana/alloy:v1.12.2
        imagePullPolicy: IfNotPresent
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        args:
        - run
        - /etc/alloy/config.alloy
        - --storage.path=/var/lib/alloy/data
        - --disable-reporting
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: aws-alloy-new-aws
            readOnly: true
            mountPath: /etc/alloy/
      - name: logstash
        image: public.ecr.aws/k9v9d5v2/admin-tools/crd-collectors/logstash:v1.0.1
        imagePullPolicy: IfNotPresent
        readinessProbe:
          httpGet:
            path: /
            port: 9091
          initialDelaySeconds: 20
          periodSeconds: 10
        ports:
        - containerPort: 9091
        args:
          - "-f"
          - "/configs/pipeline.conf"
        volumeMounts:
          - name: aws-logstash-new-aws
            readOnly: true
            mountPath: /configs/
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
