mgmt/stg/helm/loki-base/kustomize/tenants/achref/collectors/new-aws/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aws-new-aws
  namespace: tenant-achref
  annotations:
    tenant: achref
    collector: new-aws
    type: aws
spec:
  selector:
    app: aws-new-aws
  ports:
  - port: 9090
    targetPort: 9090
    name: tcp
