mgmt/stg/helm/loki-base/kustomize/tenants/achref/collectors/new-aws/httproute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aws-new-aws
  namespace: tenant-achref
  annotations:
    tenant: achref
    collector: new-aws
    type: aws
    env: stg
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
    nginx.org/rewrites: "serviceName=aws-new-aws rewrite=/loki/api/v1/raw"
    nginx.org/auth-type: "basic"
    nginx.org/auth-secret: "htpasswd"
spec:
  rules:
    - host: siem.v2.stg.accuknox.com
      http:
        paths:
          - path: /stg/achref/6abae3402b4ef2c37a94e0d309b7ed35e233f1e777489e2229c46354/new-aws/push
            pathType: Prefix
            backend:
              service:
                name: aws-new-aws
                port:
                  number: 9090
